src/applications/libguides/custom-styles.scss
/* ... */
body:not(.editmode):not(:has(.arrowPanel)) .s-lib-box-content {
    margin: 1rem 0 1.5rem 0;
}
body:not(.editmode):not(:has(.arrowPanel)) .s-lib-box-content {
    padding: 0;
    margin: 0;
}
body:not(.editmode) {
    #s-lg-col-1 {
        & > div:first-child > div:first-child > div:first-child > div:first-child > h2:first-child {
            // a h2 at the top of the page doesnt get a gap above
            margin-top: 0;
        }
        h2.s-lib-box-title {
            margin-top: 1rem;
            margin-bottom: 1rem;
            padding-left: 0;
        }
        h3,
        h4 {
            margin-top: 8px;
            margin-bottom: 16px;
        }
        h5,
        h6 {
            margin-top: 0;
            margin-bottom: 16px;
        }
        div[id^="s-lg-content-"] {
            h5,h6{
                margin-top: 1.5rem;
            }
        }
        ol,
        ul {
            margin-bottom: $spacing-m;
            margin-top: 0;
            padding-left: $spacing-m;
            li {
                margin-bottom: $spacing-xs;
            }

            li:last-child {
                margin-bottom: 0;
            }

            li > ol,
            li > ul {
                margin-bottom: 0;
                margin-top: $spacing-xs;
            }
        }
        button[aria-haspopup] {
            h2, h3, h4 {
                margin-top: 0;
            }
        }
    }
    .guides_homepage {
        #s-lg-col-1 h3 {
            padding: 20px;
        }
    }
    ol,
    #col1 ul,
    .s-lg-link-list,
    iframe {
        margin-bottom: 24px;
        padding-left: 9px;
        padding-top: 0;
    }

    #s-lg-hp-nav-bottom {
        form {
            &[role='search'] {
                .form-group {
                    width: 70%;
                    @media (max-width: 768px) {
                        width: 100%;
                    }
                }
                .btn-default {
                    color: #fff;
                    background-color: $button-color;
                    border: 1px solid $button-color;
                }
            }
        }
    }

    #s-lg-az-nav,
    #s-lg-er-nav,
    #s-lg-hp-nav,
    #s-lg-profile-nav,
    #s-lg-srch-nav {
        background-color: transparent;
    }
    #s-lg-hp-nav button.btn:focus {
        outline: none; // get rid of weird dashed outline
    }

    #s-lg-index-cols #s-lg-hp-nav {
        & > ul > li:first-of-type {
            // tabs: bar of buttons
            padding: 0;
            ul {
                margin-bottom: 0;
                & > li > button {
                    background-color: white;
                    color: $bodyCopy;
                    font-size: $font-size-l;
                    padding: 0;
                    margin: 0;
                    &:hover {
                        text-decoration: underline;
                    }
                }
                & > li.active > button {
                    background-color: white;
                    color: $uqBrandColour;
                }
            }
            li {
                border: 1px solid $borders;
                padding: 24px 32px;
                &.active {
                    border-bottom: none;
                }
            }
        }
        & > ul > li:nth-of-type(2) {
            // tabs: displayed content panel
            border-width: 0 0 0 1px;
            border-style: solid;
            border-color: $borders;
        }
    }
    @media (max-width: 64rem) {
        #s-lg-index-cols #s-lg-hp-nav {
            & > ul > li:first-of-type {
                // tabs: bar of buttons
                li {
                    padding: 16px 24px;
                }
            }
        }
    }
}
.guides_homepage div h1:not(.hero-h1),
.guides_homepage > div.s-lib-box-container,
body:not(.editmode) .remove-h2 h2.s-lib-box-title // if the box has built in h2 tags which we want to replace with internal ones of our own, use .remove-h2
{
    display: none;
}
/* ... */

